--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                </div>
                <div class="col-md-4 re_no">
                   <ul class="infomaco">
-                     <li><i class="fa fa-phone" aria-hidden="true"></i> +01 1234567890</li>
+                     <li><i class="fa fa-phone" aria-hidden="true"></i> +90 5554443322</li>
                      <li><a href="Javascript:void(0)"><i class="fa fa-envelope-o" aria-hidden="true"></i> demo@gmail.com</a></li>
                   </ul>
                </div>
@@ -110,7 +110,7 @@
                                              Prime
                                           </h1>
                                           <p data-animation="animated bounceInLeft">
-                                             Burası bir alt metin alanı.Burası bir alt metin alanı.Burası bir alt metin alanı.Burası bir alt metin alanı.
+                                             Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı.
                                           </p>
                                           <button class="btn btn-primary  read_more bounceInLeft" data-animation="animated bounceInLeft">Daha Fazla</button>
                                        </div>
@@ -134,7 +134,7 @@
                                              Prime2
                                           </h1>
                                           <p data-animation="animated bounceInLeft">
-                                             Burası bir alt metin alanı.Burası bir alt metin alanı.Burası bir alt metin alanı.Burası bir alt metin alanı.
+                                             Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı.
                                           </p>
                                           <button class="btn btn-primary  read_more bounceInLeft" data-animation="animated bounceInLeft">Daha Fazla</button>
                                        </div>
@@ -158,7 +158,7 @@
                                              Prime3
                                           </h1>
                                           <p data-animation="animated bounceInLeft">
-                                             Burası bir alt metin alanı.Burası bir alt metin alanı.Burası bir alt metin alanı.Burası bir alt metin alanı.
+                                             Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı.
                                           </p>
                                           <button class="btn btn-primary  read_more bounceInLeft" data-animation="animated bounceInLeft">Daha Fazla</button>
                                        </div>
@@ -199,8 +199,8 @@
                </div>
                <div class="col-md-6 order1">
                   <div class="titlepage text_align_left">
-                     <h2>About Zon Coffee</h2>
-                     <p>sing 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors  
+                     <h2>Hakkında</h2>
+                     <p>  Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı.  
                      </p>
                      <a class="read_more" href="about.html">Read More</a>
                   </div>
@@ -215,8 +215,8 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage text_align_center">
-                     <h2>Coffee Services</h2>
-                     <p>sing 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors 
+                     <h2>Kahveler</h2>
+                     <p> Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı.
                      </p>
                   </div>
                </div>
@@ -231,8 +231,7 @@
                               <figure><img src="images/ser_img1.png" alt="#"/></figure>
                            </div>
                            <h3>Red Coffee</h3>
-                           <p>Many desktop publishing packages and
-                              web page editors 
+                           <p>  Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı.
                            </p>
                         </div>
                      </div>
@@ -242,8 +241,7 @@
                               <figure><img src="images/ser_img3.png" alt="#"/></figure>
                            </div>
                            <h3>Black Coffee</h3>
-                           <p>Many desktop publishing packages and
-                              web page editors 
+                           <p>Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı.
                            </p>
                         </div>
                      </div>
@@ -252,16 +250,15 @@
                            <div class="ser_img">
                               <figure><img src="images/ser_img2.png" alt="#"/></figure>
                            </div>
-                           <h3>Choclate Coffee</h3>
-                           <p>Many desktop publishing packages and
-                              web page editors 
+                           <h3>Chocolate Coffee</h3>
+                           <p>Burası bir alt metin alanı. Burası bir alt metin alanı. Burası bir alt metin alanı.
                            </p>
                         </div>
                      </div>
                   </div>
                </div>
                <div class="col-md-12">
-                  <a class="read_more" href="service.html">Book Now Table</a>
+                  <a class="read_more" href="service.html">İletişim</a>
                </div>
             </div>
          </div>
@@ -288,7 +285,7 @@
                               <ul class="menu_bottom">
                                  <li><a href="index.html">Home</a></li>
                                  <li><a href="about.html">About </a></li>
-                                 <li><a href="serviec.html">Coffee Serviec</a></li>
+                                 <li><a href="serviec.html">Coffee Service</a></li>
                                  <li><a href="testimonial.html">Testimonial</a></li>
                                  <li><a href="blog.html">Blog</a></li>
                                  <li><a href="contact.html">Contact us</a></li>
@@ -303,7 +300,7 @@
                                  <li><a href="Javascript:void(0)">Read Coffee </a></li>
                                  <li><a href="Javascript:void(0)">Coffee Serviec</a></li>
                                  <li><a href="Javascript:void(0)">Green Tea</a></li>
-                                 <li><a href="Javascript:void(0)">Choclate Coffee</a></li>
+                                 <li><a href="Javascript:void(0)">Chocalate Coffee</a></li>
                               </ul>
                            </div>
                         </div>
@@ -320,9 +317,9 @@
                            <li><a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
                         </ul>
                         <ul class="conta">
-                           <li><i class="fa fa-map-marker" aria-hidden="true"></i>Locations 
+                           <li><i class="fa fa-map-marker" aria-hidden="true"></i>Konum
                            </li>
-                           <li><i class="fa fa-phone" aria-hidden="true"></i>Call +01 1234567890</li>
+                           <li><i class="fa fa-phone" aria-hidden="true"></i>ARA +90 5554443322</li>
                            <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> demo@gmail.com</a></li>
                         </ul>
                      </div>
