--- a/index.html
+++ b/index.html
@@ -283,24 +283,10 @@
                            <div class="infoma text_align_left">
                               <h3>Menu</h3>
                               <ul class="menu_bottom">
-                                 <li><a href="index.html">Home</a></li>
-                                 <li><a href="about.html">About </a></li>
-                                 <li><a href="serviec.html">Coffee Service</a></li>
-                                 <li><a href="testimonial.html">Testimonial</a></li>
-                                 <li><a href="blog.html">Blog</a></li>
-                                 <li><a href="contact.html">Contact us</a></li>
-                              </ul>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="infoma text_align_left">
-                              <h3>Coffee</h3>
-                              <ul class="menu_bottom">
-                                 <li><a href="Javascript:void(0)">Black Coffee</a></li>
-                                 <li><a href="Javascript:void(0)">Read Coffee </a></li>
-                                 <li><a href="Javascript:void(0)">Coffee Serviec</a></li>
-                                 <li><a href="Javascript:void(0)">Green Tea</a></li>
-                                 <li><a href="Javascript:void(0)">Chocalate Coffee</a></li>
+                                 <li><a href="index.html">Anasayfa</a></li>
+                                 <li><a href="about.html">Hakkımızda </a></li>
+                                 <li><a href="serviec.html">Kahveler</a></li>
+                                 <li><a href="contact.html">İletişim</a></li>
                               </ul>
                            </div>
                         </div>
@@ -308,16 +294,14 @@
                   </div>
                   <div class="col-lg-3 col-md-4">
                      <div class="infoma">
-                        <h3>Follow Us</h3>
+                        <h3>Bizi takip et !</h3>
                         <ul class="social_icon">
-                           <li><a href="Javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        
                            <li><a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                           
                         </ul>
                         <ul class="conta">
-                           <li><i class="fa fa-map-marker" aria-hidden="true"></i>Konum
+                           <li><i class="fa fa-map-marker" aria-hidden="true"></i>Adres: 
                            </li>
                            <li><i class="fa fa-phone" aria-hidden="true"></i>ARA +90 5554443322</li>
                            <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> demo@gmail.com</a></li>
